# -Cog-Culture

./: .env.example  .gitignore  ARCHITECTURE.md  CAPABILITIES_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_DELIVERY_SUMMARY.md  GROQ_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  PROJECT_COMPLETION_REPORT.md  QUICKSTART.md  README.md  STATUS_COMPLETE.md  WEB_VERIFICATION_GUIDE.md  claim_extractor.py  deployment.md  fact_verifier.py  groq_integration.py  pdf_extractor.py  pyproject.toml  render,yaml  render.yaml  requirements.txt  start_local.bat  start_local.sh  streamlit_app.py  streamlit_config.toml  test_verification_features.py  utils.py
.github/workflows/: deploy.yml  tests.yml
.streamlit/: secrets.toml.example
