[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fact-check-agent"
version = "1.0.0"
description = "Automated fact-checking web app for PDF documents"
requires-python = ">=3.8"
authors = [{name = "Your Name", email = "your.email@example.com"}]
keywords = ["fact-checking", "verification", "pdf", "ai", "streamlit"]
